--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -194,6 +194,7 @@
     &__copyright{
         font-size: 20px;
         color: #444444;
+        text-align: center;
         p{
             margin: 0;
         }
