--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -230,7 +230,6 @@ $color: #555;
 }
 
 .featured{
-
     &__container{
         @media(max-width: $mp1+px){
             padding: 0;
@@ -412,14 +411,14 @@ $color: #555;
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                background-image: url(../../img/featured/background.webp);
+                background-image: url(../../img/featured/background.png);
                 z-index: 1;
 
                 &--clone{
                     position: absolute;
                     width: 100%;
                     height: 100%;
-                    background: #c5ab5c url(../../img/featured/background.webp);
+                    background: #c5ab5c url(../../img/featured/background.png);
                     z-index: 5;
                     background-blend-mode: difference;
                     opacity: 0;
