--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -724,7 +724,12 @@ $color: #555;
 
         &--block{
             &--info{
+                display: block;
                 margin: 100px 0px 0px 0px;
+
+                @media(min-width: $md3+px){
+                    display: none;
+                }
 
                 &-title{
                     font-family: $font-family-MontserratMedium;
